--- a/index.html
+++ b/index.html
@@ -1,14 +1,61 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <img src="./public/cats n soup1.1.jpg">
-    <script type="module" src="/main.js"></script>
-  </body>
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>In The Heart of Songket</title>
+    <link href="style.css" rel="stylesheet" type="text/css">
+</head>
+
+<header>
+
+<div class="row">
+
+  <div class="col">
+      <img class="style-logo" src="images/logo.png" alt="Songket logo" >
+
+      <nav class="style-nav">
+          <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">The Making</a></li>
+          <li><a href="#">The Types</a></li>
+          <li><a href="#">Story Time</a></li>
+          <li><a href="#">Contact</a></li>
+          </ul>
+      </nav>
+          </div>
+    </div>
+</div>
+</header>
+
+<body>
+    <div class="col-2">
+      <div class="Song" style="background-color:#aaa;">
+      <img src="images/song.jpg"width="270px"></a>
+      </div>
+      <div class="intro" style="background-color:#bbb;">
+        <p>Hello everyone, my name is Song! And here you get to find out more of
+                songket, the making of it, types of it and more! I hope you have fun
+                learning here!</p>
+      </div>
+    </div>
+
+    <div class="themaking-container">
+    <a href="themaking.html" class="themaking-text"><p>The Making</p></a>
+</div>
+
+<div class="thetypes-container">
+    <a href="thetypes.html" class="thetypes-text"><p>The Types</p></a>
+</div>
+
+<div class="storytime-container">
+    <a href="storytime.html"class="storytime-text">Story Time</p></a>
+</div>
+
+<div class="contact-container">
+    <a href="contact.html" class="contact-text">Contact</a>
+</div>
+
+<div class="col-3">
+</div>
+</body>
 </html>
