fix: invalid tags bug fix

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
     <div class="col-2">
       <div class="Song" style="background-color:#aaa;">
-      <img src="images/song.jpg"width="270px"></a>
+      <img src="images/song.jpg"width="270px">
       </div>
       <div class="intro" style="background-color:#bbb;">
         <p>Hello everyone, my name is Song! And here you get to find out more of
@@ -47,11 +47,11 @@
 </div>
 
 <div class="storytime-container">
-    <a href="storytime.html"class="storytime-text">Story Time</p></a>
+      <a href="storytime.html"class="storytime-text"><p>Story Time</p></a>
 </div>
 
 <div class="contact-container">
-    <a href="contact.html" class="contact-text">Contact</a>
+      <a href="contact.html" class="contact-text"><p>Contact</p></a>
 </div>
 
 <div class="col-3">
