refactor: centered and added chat bubble

--- a/index.html
+++ b/index.html
@@ -1,60 +1,57 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>In The Heart of Songket</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
-</head>
+  <head>
+    <meta charset="utf-8" />
+    <title>In The Heart of Songket</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
 
-<header>
+  <header>
+    <div class="row">
+      <div class="col">
+        <img class="style-logo" src="images/logo.png" alt="Songket logo" />
 
-<div class="row">
-
-  <div class="col">
-      <img class="style-logo" src="images/logo.png" alt="Songket logo" >
-
-      <nav class="style-nav">
+        <nav class="style-nav">
           <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">The Making</a></li>
-          <li><a href="#">The Types</a></li>
-          <li><a href="#">Story Time</a></li>
-          <li><a href="#">Contact</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">The Making</a></li>
+            <li><a href="#">The Types</a></li>
+            <li><a href="#">Story Time</a></li>
+            <li><a href="#">Contact</a></li>
           </ul>
-      </nav>
-  </div>
-</div>
-</header>
-
-<body>
-    <div class="col-2">
-      <div class="Song" style="background-color:#aaa;">
-      <img src="images/song.jpg"width="270px">
+        </nav>
       </div>
-      <div class="intro" style="background-color:#bbb;">
-        <p>Hello everyone, my name is Song! And here you get to find out more of
-                songket, the making of it, types of it and more! I hope you have fun
-                learning here!</p>
+    </div>
+  </header>
+
+  <body>
+    <div class="col-2 div-center">
+      <div class="Song" style="background-color: #aaa">
+        <img src="images/song.jpg" width="270px" />
+      </div>
+      <div class="intro" style="background-color: #bbb">
+        <p class="intro-text">
+          Hello everyone, my name is Song! And here you get to find out more of
+          songket, the making of it, types of it and more! I hope you have fun
+          learning here!
+        </p>
       </div>
     </div>
 
     <div class="themaking-container">
-    <a href="themaking.html" class="themaking-text"><p>The Making</p></a>
-</div>
+      <a href="themaking.html" class="themaking-text"><p>The Making</p></a>
+    </div>
 
-<div class="thetypes-container">
-    <a href="thetypes.html" class="thetypes-text"><p>The Types</p></a>
-</div>
+    <div class="thetypes-container">
+      <a href="thetypes.html" class="thetypes-text"><p>The Types</p></a>
+    </div>
 
-<div class="storytime-container">
-      <a href="storytime.html"class="storytime-text"><p>Story Time</p></a>
-</div>
+    <div class="storytime-container">
+      <a href="storytime.html" class="storytime-text"><p>Story Time</p></a>
+    </div>
 
-<div class="contact-container">
+    <div class="contact-container">
       <a href="contact.html" class="contact-text"><p>Contact</p></a>
-</div>
-
-<div class="col-3">
-</div>
-</body>
+    </div>
+  </body>
 </html>
