--- a/index.html
+++ b/index.html
@@ -6,52 +6,11 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
 
-  <header>
-    <div class="row">
-      <div class="col">
-        <img class="style-logo" src="images/logo.png" alt="Songket logo" />
-
-        <nav class="style-nav">
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">The Making</a></li>
-            <li><a href="#">The Types</a></li>
-            <li><a href="#">Story Time</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
-        </nav>
-      </div>
-    </div>
-  </header>
+  <header id="navbar"></header>
 
   <body>
-    <div class="col-2 div-center">
-      <div class="Song" style="background-color: #aaa">
-        <img src="images/song.jpg" width="270px" />
-      </div>
-      <div class="intro" style="background-color: #bbb">
-        <p class="intro-text">
-          Hello everyone, my name is Song! And here you get to find out more of
-          songket, the making of it, types of it and more! I hope you have fun
-          learning here!
-        </p>
-      </div>
-    </div>
+    <div id="app"></div>
 
-    <div class="themaking-container">
-      <a href="themaking.html" class="themaking-text"><p>The Making</p></a>
-    </div>
-
-    <div class="thetypes-container">
-      <a href="thetypes.html" class="thetypes-text"><p>The Types</p></a>
-    </div>
-
-    <div class="storytime-container">
-      <a href="storytime.html" class="storytime-text"><p>Story Time</p></a>
-    </div>
-
-    <div class="contact-container">
-      <a href="contact.html" class="contact-text"><p>Contact</p></a>
-    </div>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
